# ScaphandreDrv-rs

./: Cargo.toml  README.md  ScaphandreDrv.sys
.github/workflows/: check-driver-upstream.yml  publish.yml
examples/: wattseal_like.rs
src/: device.rs  error.rs  lib.rs  service.rs  util.rs
tests/: driver_smoke.rs
